# routes/swagger.js
@@ -2,6 +2,8 @@ const router = require('express').Router();
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('../swagger.json');
 router.use('/api-docs', swaggerUi.serve);
-router.get('/api-docs', swaggerUi.setup(swaggerDocument));
+router.get(
+    // #swagger.tags = ["Documentation"]
+    '/api-docs', swaggerUi.setup(swaggerDocument));
 
 module.exports = router;
